Client: Use Desktop.browse to open links
This enables removing a dependency on Applet APIs which are deprecated
since Java 9. The browse API can only open URIs so this required
changing existing code to construct URIs instead of URLs.